src/components/WebsitePricing/WebsitePricing.scss
.websitepricing-container {
  .starttrial-btn ,.contact-btn{
    background-color: #097fff !important;
  }
  .visitors-content {
    height: 80px !important;
  }
  .visitors-text {
    font-weight: 100;
    position: relative;
    top: -20px;
  }
  .bx-shadow {
    box-shadow: 0px 6px 10px -4px #999999 !important;
  }
  .conditional-pricestmt {
    position: absolute;
    right: 0%;
    color: #999999;
    font-weight: 500;
    font-size: 13px;
    padding: 10px 10px 10px 10px;
  }
  .pricing-below{
    padding-bottom: 0px !important;
  }
  .makeAlignConst {
    margin-top: 0px !important;
  }
  .pricing-title {
    padding-top: 100px;
    padding-bottom: 120px;
  }

  .tgl {
    display: none;
    box-sizing: border-box;
    &:after, &:before {
      box-sizing: border-box;
    }
    * {
      box-sizing: border-box;
      &:after, &:before {
        box-sizing: border-box;
      }
    }
    + .tgl-btn {
      box-sizing: border-box;
      height: 25px !important;
      width: 45px !important;
      margin-left: 4px !important;

    }
    &::-moz-selection, &:after::-moz-selection, &:before::-moz-selection {
      background: none;
    }
    * {
      &::-moz-selection, &:after::-moz-selection, &:before::-moz-selection {
        background: none;
      }
    }
    + .tgl-btn::-moz-selection, &::selection, &:after::selection, &:before::selection {
      background: none;
    }
    * {
      &::selection, &:after::selection, &:before::selection {
        background: none;
      }
    }
    + .tgl-btn {
      &::selection {
        background: none;
      }
      outline: 0;
      display: block;
      width: 4em;
      height: 2em;
      position: relative;
      cursor: pointer;
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
      &:after, &:before {
        position: relative;
        display: block;
        content: "";
        width: 50%;
        height: 100%;
      }
      &:after {
        margin-top: 0;
        left: 0;
      }
      &:before {
        display: none;
      }
    }
    &:checked + .tgl-btn:after {
      margin-top: 0;
      left: 50%;
    }
  }



  .tgl-ios {
    + .tgl-btn {
      background: #097fff!important;
      border-radius: 2em;
      padding: 2px;
      padding-left: 0px !important;
      padding-top: 0px !important;
      transition: all .4s ease;
      border: 1px solid #e8eae9;
      &:after {
        border-radius: 2em;
        background: #fbfbfb;
        transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;
        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 4px 0 rgba(0, 0, 0, 0.08);
      }
      &:hover:after {
        will-change: padding;
      }
      &:active {
        box-shadow: inset 0 0 0 2em #e8eae9;
        &:after {
          padding-right: .8em;
        }
      }
    }
    &:checked + .tgl-btn {
      background: #097fff;
      &:active {
        box-shadow: none;
        &:after {
          margin-left: .8em;
        }
      }
    }
  }

}

@media only screen and (min-width: 768px) and ( max-width : 993px) {
  .websitepricing-container {
    #leftmg {
      padding-right: 60px !important;
    }
    #rightmg {
      padding-left: 15px !important;
    }
    .unpad--top {
      .container {
        max-width: 90%;
        .price-cards {
          position: relative !important;
          .pricing-tab {
            max-width: 500px !important;
            min-height: 700px !important;
            box-shadow:  0px 8px 16px -4px #999 ;
            .boxed.boxed--lg {
              padding: 0.785714em;
            }
            .price-info {
              display: flex;
              width: 90%;
              margin: 0 auto;
              .checkmark:not(:last-child) {
                margin-right: 5px;
              }
              .inline-block {
                font-size: 12px;
              }
            }
          }
        }
      }
    }
  }
}

@media only screen and (min-width:  576px) and ( max-width: 768px) {
  .websitepricing-container {
    #leftmg {
      padding-right: 0px !important;
      position: absolute;
      left: 130px;
      width: 100px;
    }
    #rightmg {
    position: relative;
    left: 25px;
    }
    .unpad--top {
      .container {
        text-align: -webkit-center;
        .price-cards {
          position: relative;
          width: 55%;
          .price-info {
            width: 60%;
            text-align: left;
          }
        }
      }
    }

    .text-left.pl-5 {
      margin: 0 auto;
      width: 250px;

    }
    .pricing-tab {
      margin-bottom: 50px;
    }
  }
}

@media only screen and (min-width:  100px) and (max-width:  576px) {
  .websitepricing-container {
    .switch {
      width: 100%;
      #leftmg {
        text-align: inherit;
        width: auto !important;
      }
      .togglebtn {
        text-align: unset;
        width: auto;
      }
      #rightmg {
        text-align: unset;
      }
    }
    .unpad--top {
      .container {
        text-align: -webkit-center;
        .price-cards {
          position: relative;
          width: 55%;
          .price-info {
            width: 65%;
            text-align: left;
          }
        }
      }
    }

    .switch {
      position: absolute;
      left: 30px;
    }
    .text-left.pl-5 {
      margin: 0 auto;
      width: 250px;
    }
  }
}

@media only screen and (max-width:  536px) {
  .websitepricing-container {
    .unpad--top {
      .container {
        text-align: -webkit-center;
        .price-cards {
          position: relative;
          width: 65%;
          .price-info {
            width: 75%;
            text-align: left;
          }
        }
      }
    }
  }
}

